--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.1.2",
     "framer-motion": "^12.6.3",
